# Generative-AI

./: Happy New Year  LICENSE
CampusX/01_LLMandChatModels/: ChatModel.py  LLM.py  main.py  pyproject.toml
CampusX/02_Prompts/: 01_Prompts.py  02_Prompts.py  03_PromptTemplate.py  04_PromptTemplate.py  05_PromptTemplate.py  06_Chatbot.py  07_Chatbot.py  08_ChatPromptTemplate.py  09_ChatPromptTemplate.py  main.py  messages.py  pyproject.toml
CampusX/03_StructuredOutputs/: .env  01_TypedDictionary.py  02_With_Structured_Output.py  03_Pydantic.py  04_StructuredOutput_Pydantic.py  05_json_schema.json  06_with_structured_output_json.py  main.py  pyproject.toml
CampusX/04_OutputParsers/: 01_StringOutputParser.py  02_StringOutputParser.py  03_JSONOutputParsers.py  04_JSONOutputParsers.py  05_DrawBackOFJSONOutputParser.py  06_StructuredOutputParsers.py  07_PydanticOutputParsers.py  08_PydanticOutputParser_Chains.py  Info.md  main.py  pyproject.toml
CampusX/05_Chains/: 01_SimpleChains.py  02_SimpleChains.py  03_SequentialChain.py  04_SequentialChain_Streaming.py  05_ParallelSequentialChain.py  06_ParallelSequenceChains_Streaming.py  07_ConditionalChains.py  09_ConditionalChains_Streaming.py  main.py  pyproject.toml
CampusX/06_Runnables/: 01_Runnable.ipynb  02_StandardisationOfChainsByRunnables.ipynb  main.py  pyproject.toml
CampusX/07_DocumentLoaders/: main.py  pyproject.toml
CampusX/07_DocumentLoaders/CSVLoader/: 01_CSVLoader.py
CampusX/07_DocumentLoaders/DirectoryLoaders/: 01_DirectoryLoaders.py  02_LazyLoadFunction.py
CampusX/07_DocumentLoaders/PyPDFLoader/: 01_PyPDFLoader.py  Important.txt
CampusX/07_DocumentLoaders/TextLoaders/: 00_TextLoaders.py  01_TextLoaders.py  02_TextLoaders_Streaming.py  cricket.txt
CampusX/07_DocumentLoaders/WebBaseLoader/: 01_WebBaseLoader.py
CampusX/08_TextSplitters/: 02_TextSplitterWithDocumentLoader.py  README.md  main.py  pyproject.toml
CampusX/08_TextSplitters/Document-Structured-Based/: 01_DocumentBased.py
CampusX/08_TextSplitters/Length-Based-TextSplitter/: 01_LengthBasedTextSplitter.py
CampusX/08_TextSplitters/Semantic-Meaning_Based/: 01_Semantic.py
CampusX/08_TextSplitters/Text-Structured Based - RecursiveCharacterTextSplitter/: 01_RecursiveCharacterTextSplitter.py
CampusX/09_VectorStores/: VectorStore.ipynb  main.py  pyproject.toml
CampusX/09_VectorStores/my_chroma_db/: chroma.sqlite3
CampusX/10_Retreival/: langchain_retrievers.py  main.py  pyproject.toml
CampusX/10_Retreival/Document-Based-Retreivers/: Wikipedia_Retreiver.ipynb
CampusX/10_Retreival/MultiQueryRetreival/: MultiQueryRetreival.ipynb
CampusX/10_Retreival/RetreivalStratergy-MMR/: MaximalMarginalRelevence.ipynb
CampusX/10_Retreival/Vector-Store-Retreiver/: VectorStoreRetreiver.ipynb
CampusX/11_Tools/: Tools.ipynb
CampusX/12_Tool-Calling/: Currency_Conversion_Tool.ipynb  Tool_Binding.ipynb  main.py  pyproject.toml
CampusX/12_YoutubeChatbot/: Chatbot.ipynb  Chatbot.py  pyproject.toml
CampusX/13_AI-Agent/: Agent.ipynb  main.py  pyproject.toml
CampusX/13_YoutubeChatbot/: Chatbot.ipynb  Chatbot.py
Krish-Naik/Chainlit_Library/: main.py  pyproject.toml
Multimodal_RAG/: main.py  pyproject.toml
