[project]
name = "01-llmandchatmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
]
